# nslsbp

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  barbied  cc_beacon_iface_wrapper.h  flight_ready.sh  gpio-set.sh  ground_station.c  ground_station.h  grounded  nslsbpd  xlauncher  xlauncher.c  xlauncher.h
ground_segment/: Makefile  ground_station  ground_station.c  ground_station.h
libraries/: Makefile  cc_beacon_iface_wrapper.c  cc_beacon_iface_wrapper.h  dbman.c  dbman.h  dbman_credentials.h  dbman_test.c  hk_data.sql  nslsbp.h  xbee_data.sql
module_beacon/cc1101_3c1_adaptation/: Makefile  cc_control.c  cc_low_level.c  cc_low_level.h  comms.conf  error_def.h  spidev.c  spidev.h
module_gps_temp/: CMakeLists.txt
module_gps_temp/apps/: CMakeLists.txt  beacon_recv.c  sensor_core.c
module_gps_temp/include/: bmp180.h  cc_beacon_iface.h  gps.h  mcp9808.h  mpu-9150.h  sensors.h
module_gps_temp/src/: CMakeLists.txt
module_maps/: auto_upload_gps.php  bbs_db.sql  bbs_styles.css  db_download.php  gps.html  gps.js  index.html  map.html  map.js  map_download.php  nslsbp_styles.css  tables_download.php  teddy_db.sql
module_maps/gps_data_viewer/: auto_upload_gps.php
module_maps/mysql-db-wrapper/: config.inc.php
module_ublox-max-m8q/gps_data_viewer/: auto_upload_gps.php  bbs_db.sql  bbs_styles.css  db_download.php  gps.html  gps.js  index.html  map.html  map.js
module_vitow/: save_tcpdump.sh  vitow.h  vitow_dbg.c  vitow_launch.sh  vitow_rx.c  vitow_stream.sh  vitow_stream_test.sh  vitow_tx.c
module_xbee/: Makefile  xbee_lib  xbee_lib.c  xbee_lib.h
(+14 files in other folders)
